# accpa-spring-2022

./: .gitignore  README.md
lab-01/: Convert.hs  Eval.hs  Makefile  README.md  interpreter.hs
lab-01-cpp/: .gitignore  CMakeLists.txt  Convert.h  Eval.h  Interpreter.cpp  Makefile  README.md
lab-01-java/: Makefile  README.md
lab-01-java/Syntax/: Nameless.cf  Normal.cf
lab-01/Eval/: Nameless.hs
lab-01/Syntax/: Makefile  MakefileNormal  Nameless.cf  Normal.cf  Normal.tex
lab-02/: Convert.hs  Eval.hs  README.md  TypeCheck.hs  interpreter.hs
lab-02-actual/: Convert.hs  Typecheck.hs  interpreter.hs
lab-02-cpp/: .clang-format  Convert.h  Eval.h  Interpreter.cpp  Makefile  README.md  TypeCheck.h
lab-03/: Convert.hs  Eval.hs  Makefile  README.md  TypeCheck.hs
lab-03-cpp/: CMakeLists.txt  Convert.h  Interpreter.cpp  README.md  TypeCheck.h
lab-03-cpp/Eval/: Nameless.h
lab-03-cpp/Syntax/: Nameless.cf  Normal.cf
lab-03-cpp/Syntax/Nameless/: Absyn.C  Absyn.H  Bison.H  Lexer.C  Makefile  Nameless.l  Nameless.y  Parser.C  Parser.H  Printer.C  Printer.H  Skeleton.C  Skeleton.H  Test.C  TestNameless
lab-03-cpp/Syntax/Normal/: Absyn.C  Absyn.H  Bison.H  Lexer.C  Normal.l  Normal.y  Parser.C  Parser.H  Printer.C  Printer.H  Skeleton.C  Skeleton.H  TestNormal
lab-03-cpp/doc/Syntax/: Nameless.tex
lab-03-cpp/examples/: full.example
lab-04/: Convert.hs  README.md  TypeCheck.hs  interpreter.hs
lab-06/: Convert.hs  Eval.hs  README.md  TypeCheck.hs  interpreter.hs
lab-07/: Convert.hs  README.md  TypeCheck.hs
lab-10/: Convert.hs  README.md  TypeCheck.hs
(+317 files in other folders)
